[package]
name = "skys-elvis-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { version = "0.11.0", features = ["verbose", "log"] }
env_logger = "0.11.5"
log = "= 0.4.22"

[dev-dependencies]
env_logger = "0.11.5"
